--- a/app/views/shared/_soundwalks_index.html.erb
+++ b/app/views/shared/_soundwalks_index.html.erb
@@ -1,11 +1,9 @@
-<%= render :partial => '/shared/soundwalks_map' %>
-
 <% if defined? new_soundwalk_option %>
 <p><%= link_to 'Upload soundwalk', new_soundwalk_path %></p>
 <% end %>
 
 <ol id='stream'>
-<% @soundwalks.each do |soundwalk| %>
+<% soundwalks.each do |soundwalk| %>
 	<%= stream_item(soundwalk, defined? show_users, true) %>
 <% end %>
 </ol>
