--- a/app/views/soundwalks/show.html.erb
+++ b/app/views/soundwalks/show.html.erb
@@ -1,17 +1,41 @@
-<%= render :partial => 'shared/user_profile', :locals => {:user => @soundwalk.user, :side => 'right'} %>
+<%	
+	title = @soundwalk.title
+	title_text = "by #{link_to @soundwalk.user.name, @soundwalk.user}"
+	menu = [
+		['Upload sound', new_soundwalk_sound_path(@soundwalk), {}],
+		['Edit', edit_soundwalk_path(@soundwalk), {}],
+		['Delete', @soundwalk, {:method => :delete}]
+	]
+	
+	count = @soundwalk.sounds.count
+	
+	if count > 0
+		sum_duration = 0
+		min_duration = 9999999
+		max_duration = -9999999
+		
+		for sound in @soundwalk.sounds
+			duration = sound.samples / sound.sample_rate.to_f
+			
+			sum_duration += duration
+			min_duration = duration if duration < min_duration
+			max_duration = duration if duration > max_duration
+		end
+	
+		mean_duration = sum_duration / @soundwalk.sounds.count
+	end
+	
+%>
 
-<h2><%=h @soundwalk.title %></h2>
+<%= render :partial => 'shared/profile', :locals => {:title => title, :title_text => title_text, :menu => menu, :user => @soundwalk.user} %>
+<%= render :partial => 'shared/sounds_map', :locals => {:sounds => @soundwalk.sounds, :soundwalk => @soundwalk} %>
 
-<%= render :partial => 'shared/sounds_map' %>
-
-<% if @soundwalk.user.id == current_user.id %>
-	<p>
-		<%= link_to 'Upload sound', new_soundwalk_sound_path(@soundwalk) %> | <%= link_to 'Edit', edit_soundwalk_path(@soundwalk) %> | <%= link_to 'Delete', @soundwalk, :method => :delete %>
-	</p>
-<% end %>
-
+<h2>Details</h2>
 <p><%=h @soundwalk.description %></p>
-<p>Posted <%= post_date @soundwalk %></p> 
-<p>Recorded <%= time_span @soundwalk %></p>
+<p><span class="label">Posted:</span> <%= post_date @soundwalk %></p> 
+<p><span class="label">Recorded:</span> <%= time_span @soundwalk %></p>
+<p><span class="label">Sounds:</span> <%= @soundwalk.sounds.count %></p>
+<% if count > 0 %><p><span class="label">Sound lengths:</span> <%= sprintf('%.2f', min_duration)%>s - <%= sprintf('%.2f', max_duration) %>s (mean: <%= sprintf('%.2f', mean_duration) %>s)</p><% end %>
 
-<%= render :partial => 'shared/sounds_index' %>
+<h2>Sounds</h2>
+<%= render :partial => 'shared/sounds_index', :locals => {:sounds => @soundwalk.sounds} %>
