--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -2,8 +2,8 @@
 @import containers.sass
 @import forms.sass
 @import maps.sass
-@import stream.sass
-@import profile.sass
+@import streams.sass
+@import users.sass
 @import settings.sass
-@import soundwalk.sass
-@import sound.sass
+@import soundwalks.sass
+@import sounds.sass
