--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -1,67 +1,70 @@
 @import variables.sass
 
 body
-  font-family = !fonts_normal
-  background-color = !tan
-  font-size: 1em
+	font-family = !fonts_normal
+	background-color = !tan
+	font-size: 1em
 
 strong, em, b, i
-  font-family = !fonts_styled
-
-.clear
-  clear: both
-  width: 0
-  height: 0
-  margin: 0
-  padding: 0
-
-h1
-  width: 100%
-  
-  margin: 0
-    bottom: 1em
-  
-  padding: 0
-    bottom: 0.5em
-  
-  border-bottom = !dashed_border
-  
-  font-size: 1.5em
-  
-  color = !red
-  text-align: center
-  
-  a
-    color = !red
-
-h2
-  width: 100%
-  margin: 0
-    top: 1em
-    bottom: 1em
-  padding: 0
-    bottom: 0.5em
-  
-  border-bottom = !dashed_border
-  font-size: 1.2em
-  color = !dark_blue
-  text-align: center
+	font-family = !fonts_styled
 
 a
-  color = !dark_blue
-  text-decoration: none
-  
-  &:hover
-    color = !red
-  
-  img
-    border: none
+	color = !dark_blue
+	text-decoration: none
+	
+	&:hover
+		color = !red
+	
+	img
+		border: none
+
+
+.clear
+	clear: both
+	width: 0
+	height: 0
+	margin: 0
+	padding: 0
+
+h1
+	width: 100%
+	margin: 0
+	bottom: 1em
+	padding: 0
+	bottom: 0.5em
+	border-bottom = !dashed_border
+	font-size: 2em
+	color = !red
+	text-align: center
+	font-weight: normal
+	
+	a
+		color = !red
+
+h2
+	width: 100%
+	margin: 0
+	top: 1em
+	bottom: 1em
+	padding: 0
+	bottom: 0.5em
+	border-bottom = !dashed_border
+	font-size: 1.2em
+	color = !dark_blue
+	text-align: center
 
 p.notice
-  font-size: 1em
-  color = !green
+	text-align: center
+	color = !green
 
 p.error
-  font-size: 1em 
-  text-align: center
-  color = !red
+	text-align: center
+	color = !red
+
+.label
+	+float_left
+	text-align: right
+	width: 8em
+	margin-right: 0.5em
+	color = !dark_blue
+	
