--- a/public/stylesheets/sass/_maps.sass
+++ b/public/stylesheets/sass/_maps.sass
@@ -1,14 +1,17 @@
 @import variables.sass
 
 #soundwalk-index-map
-  +float_right
-  border = !thick_border
-  width = !square_map_width
-  height = !square_map_height
+	+float_right
+	border = !thick_border
+	width = !square_map_width
+	height = !square_map_height
+	margin: 0.5em
+	overflow: hidden
 
 #soundwalk-map
-  +float_right
-  border = !thick_border
-  width = !square_map_width
-  height = !square_map_height
-  margin: 0.5em
+	+float_right
+	border = !thick_border
+	width = !square_map_width
+	height = !square_map_height
+	margin: 0.5em
+	overflow: hidden
