--- a/app/views/soundwalks/show.html.erb
+++ b/app/views/soundwalks/show.html.erb
@@ -1,12 +1,4 @@
 <%	
-	title = @soundwalk.title
-	title_text = "by #{link_to @soundwalk.user.name, @soundwalk.user}"
-	menu = [
-		['Upload sound', new_soundwalk_sound_path(@soundwalk), {}],
-		['Edit', edit_soundwalk_path(@soundwalk), {}],
-		['Delete', @soundwalk, {:method => :delete}]
-	]
-	
 	count = @soundwalk.sounds.count
 	
 	if count > 0
@@ -24,18 +16,25 @@
 	
 		mean_duration = sum_duration / @soundwalk.sounds.count
 	end
-	
 %>
 
-<%= render :partial => 'shared/profile', :locals => {:title => title, :title_text => title_text, :menu => menu, :user => @soundwalk.user} %>
+<%= render :partial => 'shared/soundwalk_profile', :locals => {:soundwalk => @soundwalk} %>
 <%= render :partial => 'shared/sounds_map', :locals => {:sounds => @soundwalk.sounds, :soundwalk => @soundwalk} %>
 
 <h2>Details</h2>
-<p><%=h @soundwalk.description %></p>
-<p><span class="label">Posted:</span> <%= post_date @soundwalk %></p> 
-<p><span class="label">Recorded:</span> <%= time_span @soundwalk %></p>
-<p><span class="label">Sounds:</span> <%= @soundwalk.sounds.count %></p>
-<% if count > 0 %><p><span class="label">Sound lengths:</span> <%= sprintf('%.2f', min_duration)%>s - <%= sprintf('%.2f', max_duration) %>s (mean: <%= sprintf('%.2f', mean_duration) %>s)</p><% end %>
-
+<div>
+<span class="label">Description:</span>
+<div class='detail'><%= textilize(h @soundwalk.description) %></div>
+<span class="label">Posted:</span>
+<p class='detail'><%= post_date @soundwalk %></p> 
+<span class="label">Recorded:</span> 
+<p class='detail'><%= time_span @soundwalk %></p>
+<span class="label">Sounds:</span> 
+<p class='detail'><%= @soundwalk.sounds.count %></p>
+<% if count > 0 %>
+<span class="label">Sound lengths:</span> 
+<p><%= sprintf('%.2f', min_duration)%>s - <%= sprintf('%.2f', max_duration) %>s (mean: <%= sprintf('%.2f', mean_duration) %>s)</p>
+<% end %>
+</div>
 <h2>Sounds</h2>
 <%= render :partial => 'shared/sounds_index', :locals => {:sounds => @soundwalk.sounds} %>
