--- a/public/stylesheets/sass/_streams.sass
+++ b/public/stylesheets/sass/_streams.sass
@@ -38,29 +38,37 @@ div
 		vertical-align: top
 		padding-top: 0.5em
 		padding-bottom: 0.5em
+		z-order: 2
 		border-bottom = !dashed_border
-
-span
-	&.soundwalk_title
-		display: block
-		margin-bottom: 0.5em
-		font-weight: bold
-		text-align: left
-		
-	&.soundwalk_date
+	
+	&.soundwalk_meta
+		+float_right
 		width: 11em
 		margin: 0.5em
-		display: block
 		text-align: left
-		float: right
 		color = !gray
 		font-size: .8em
 		font-style: italic
 		
+	&.soundwalk_delete
+		+float_right
+		margin: 0.5em
+		font-size: .8em
+		z-order: 1
+		
+		span.delete_button
+			color = !red
+		
+span
+	&.soundwalk_title
+		margin-bottom: 0.5em
+		font-weight: bold
+		text-align: left
+		
 	&.soundwalk_description 
 		display: block
 		text-align: left
-
+		
 .pages
 	width: 34em
 	text-align: center
