--- a/app/views/sounds/new.html.erb
+++ b/app/views/sounds/new.html.erb
@@ -1,7 +1,11 @@
+<% content_for :title do %>
+	Add Sounds to <%= @soundwalk.title %>
+<% end %>
+
 <h1>Add Sound to <%= @soundwalk.title %></h1>
 
 <div id='new-sound'>
-	<div class='help'>
+	<div class='help' id='help'>
 		<p>
 			Here is some text that will display help for uploading sounds to the server.
 		</p>
