--- a/app/views/soundwalks/edit.html.erb
+++ b/app/views/soundwalks/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+	Edit <%= @soundwalk.title %>
+<% end %>
+
 <h1>Edit <%= @soundwalk.title %></h1>
 
-<%= render :partial => 'form' %>
+<%= render :partial => 'form', :locals => {:new_soundwalk => false} %>
