--- a/app/views/soundwalks/index.html.erb
+++ b/app/views/soundwalks/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+	Public timeline
+<% end %>
+
 <h1>Public timeline</h1>
 
 <%= render :partial => 'shared/soundwalks_map', :locals => {:soundwalks => @soundwalks} %>
