--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+	Settings
+<% end %>
+
 <% form_for @user do |form| %>
 <div id='settings_profile'>
 	<h1>Profile</h1>		
