--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -17,8 +17,7 @@ a
 	
 	img
 		border: none
-
-
+		
 .clear
 	clear: both
 	width: 0
@@ -53,6 +52,14 @@ h2
 	color = !dark_blue
 	text-align: center
 
+p
+	margin-top: 0.5em
+	line-height: 1.5em
+	
+em
+	font-style: normal
+	border-bottom = "3px solid " + !green
+	
 p.notice
 	text-align: center
 	color = !green
