--- a/public/stylesheets/sass/_sounds.sass
+++ b/public/stylesheets/sass/_sounds.sass
@@ -10,6 +10,17 @@
 		margin: 0
 		width: 33em
 
+#upload-sounds
+	text-align: center
+	.help
+		+float_right
+		text-align: left
+		width: 25em
+
+	form
+		margin: 0
+		width: 33em
+		
 #sound-index
 	font-size: 0.8em
 	width: 40em
