--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -69,12 +69,15 @@ p.error
 	color = !red
 
 .label
-	+float_left
+	float: left
 	text-align: right
-	width: 8em
+	width: 10em
+	margin: 0
 	margin-right: 0.5em
 	color = !dark_blue
-
-.detail
-	margin-left: 8.5em
+	clear: left
+	height: 2em
 	
+.detail
+	height: 2em
+	margin: 0
