--- a/public/stylesheets/sass/_settings.sass
+++ b/public/stylesheets/sass/_settings.sass
@@ -1,12 +1,12 @@
 @import variables.sass
 
-#settings_profile
+#settings-profile
 	+float_left
 	margin: 0
 	text-align: left
 	margin-right: 1em
 
-#settings_privacy
+#settings-privacy
 	width: 100%
 	margin: 0
 	text-align: left
