--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -1,13 +1,16 @@
 // Colors.
 !red = #bf3030
 !light_red = !red / 2 + #999999
-!very_light_red = !light_red / 2 + #999999
+!very_light_red = !light_red / 2 + #FF8888
+
 !green = #9dbf30
 !light_green = !green + #226622
-!very_light_green = !green / 2 + #999999
+!very_light_green = !green / 2 + #99ffbc
+
+!dark_blue = #223241
 !light_blue = #a3bfbf
 !very_light_blue = !light_blue / 2 + #999999
-!dark_blue = #223241
+
 !tan = #efebe6
 !gray = #888888
 !light_gray = #efefef
