--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -20,14 +20,26 @@ label
 
 	&.field-nofloat
 		color = !gray
+		
+	&.field-nontext
+		+float_left
+		height: 1.2em
+		width: 8em
+		margin: 0.5em
+		padding: 0.5em
+		text-align: right
+		color = !gray
+		margin-top: 0.25em
+		padding-top: 0
 
 div.submit
 	margin-left: 10em
 	
 div.submit-options
+	clear: left
 	margin-left: 9.5em
 	text-align: center
-	
+
 input
 	font-size: 1em
 
@@ -49,6 +61,21 @@ input
 		padding: 0.25em
 		border = "1px dashed " + !gray
 		
+	&.small-button
+		font-size: 0.8em
+		+rounded_border
+		width: 4em
+		margin: 0.5em
+		padding: 0.25em
+		border = "1px dashed " + !gray
+	
+	&.free-button
+		+float_right
+		+rounded_border
+		margin: 0.5em
+		padding: 0.25em
+		border = "1px dashed " + !gray
+			
 	&.actualfile
 		+rounded_border
 		width: 11.5em
@@ -106,3 +133,19 @@ ul.field
 		list-style: none
 		margin-left: 0
 		padding-left: 0
+
+.editable
+	&:hover
+		background-color = !very_light_blue
+
+.editable
+	color = !dark_blue
+	
+	&:hover
+		color = !red
+
+h1.editable
+	color = !red
+	
+	&:hover
+		color = !dark_blue
