--- a/public/stylesheets/sass/_sounds.sass
+++ b/public/stylesheets/sass/_sounds.sass
@@ -20,32 +20,6 @@
 	form
 		margin: 0
 		width: 33em
-		
-#sound-index
-	font-size: 0.8em
-	width: 40em
-	margin: 0 auto 0 auto
-	padding: 0
-	
-	tr
-		margin: 0
-		padding: 0
-		border: 0
-		
-		&:hover
-			background-color = !very_light_blue
-			
-		th
-			color = !dark_blue
-			border: 0
-			border-bottom = !dashed_border
-			margin: 0
-			padding: 0.5em
-			
-		td
-			margin: 0
-			border: 0
-			padding: 0.5em
 
 #sound-map
 	+float_right
@@ -67,6 +41,8 @@
 	.next
 		font-size: 3em
 		vertical-align: middle
-		
+
+#sound-details
+	
 #sound-features
 	text-align: center
