--- a/app/views/soundwalks/_soundwalks_index.html.haml
+++ b/app/views/soundwalks/_soundwalks_index.html.haml
@@ -1,5 +1,5 @@
 - content_for :javascript do
-	= javascript_include_tag 'lib/jquery', 'soundwalks'
+	= javascript_include_tag 'soundwalks'
 	
 - if defined? new_soundwalk_option
 	%p= link_to 'Upload soundwalk', new_soundwalk_path
