--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -68,7 +68,7 @@ p.error
 	text-align: center
 	color = !red
 
-.label
+p.label
 	float: left
 	text-align: right
 	width: 10em
@@ -78,6 +78,6 @@ p.error
 	clear: left
 	height: 2em
 	
-.detail
+p.detail
 	height: 2em
 	margin: 0
