--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -37,16 +37,20 @@ div.submit
 	
 div.submit-options
 	clear: left
-	margin-left: 9.5em
+	margin-left: 8em
 	text-align: center
 
+div.field-nontext
+	text-align: center
+	width: 31em
+	
 input
 	font-size: 1em
-
+	
 	&.field
 		+rounded_border
 		width: 20em
-		height: 1.2em
+		height: 2.2em
 		margin: 0.5em
 		padding: 0.5em
 
@@ -59,6 +63,7 @@ input
 		width: 7.5em
 		margin: 0.5em
 		padding: 0.25em
+		height: 2.2em
 		border = "1px dashed " + !gray
 		
 	&.small-button
@@ -79,7 +84,7 @@ input
 	&.actualfile
 		+rounded_border
 		width: 11.5em
-		height: 1.2em
+		height: 2.2em
 		margin: 0.5em
 		padding: 0.5em
 
