--- a/app/views/soundwalks/new.html.haml
+++ b/app/views/soundwalks/new.html.haml
@@ -24,8 +24,8 @@
 		%h2 Sounds
 		%p 
 			Once you have completed this form, you can choose to save your Soundwalk for later editing or continue to |
-			upload sounds to it. Your soundwalk will not be accessible to anyone but yourself until you have uploaded |
-			sounds.
+			upload sounds to it. Make sure to publish your soundwalk as <em>private</em> if you do not wish people to |
+			be able to see your soundwalk until you have finished uploading sounds. You can change this later. 
 
-= render :partial => 'form', :locals => {:new_soundwalk => true}
+	= render :partial => 'form', :locals => {:new_soundwalk => true}
 
