--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,12 +1,19 @@
 - content_for :title do
 	Latest soundwalks
-
+	
 - content_for :javascript do
 	= javascript_include_tag 'lib/jquery'
 	
 - if logged_in?
-	%h1 Latest soundwalks
+	= render :partial => 'users/user_profile', :locals => {:user => current_user}
 	
-	= render :partial => 'soundwalks/soundwalks_map', :locals => {:soundwalks => @soundwalks}
-	= render :partial => 'soundwalks/soundwalks_index', :locals => {:show_users => :true, :soundwalks => @soundwalks}
-	= render :partial => 'shared/pagination', :locals => {:page => @page, :pages => @pages, :options => {:controller => :home}}
+	%h1 Latest watched soundwalks
+	- if current_user.following_soundwalks.count > 0
+		= render :partial => 'soundwalks/soundwalks_map', :locals => {:soundwalks => @soundwalks}
+		= render :partial => 'soundwalks/soundwalks_index', :locals => {:show_users => :true, :soundwalks => @soundwalks}
+		= render :partial => 'shared/pagination', :locals => {:page => @page, :pages => @pages, :options => {:controller => :home}}
+	- elsif current_user.friends.count > 0
+		%p None of the people you are following have posted any soundwalks.
+	- else
+		%p You are not following anyone.
+		
