--- a/app/views/soundwalks/show.html.haml
+++ b/app/views/soundwalks/show.html.haml
@@ -5,7 +5,7 @@
 	= render :partial => 'meta/authenticity'
 
 -content_for :javascript do
-	= javascript_include_tag 'lib/jquery', 'lib/jquery-ui', 'editable', 'form-buttons', 'soundwalks'
+	= javascript_include_tag 'simpledebug', 'lib/jquery', 'lib/jquery-ui', 'editable', 'form-buttons', 'soundwalks'
 	
 -# Query optimization.
 - @sounds = @soundwalk.sounds.find(:all, :order => 'recorded_at ASC')
