--- a/public/stylesheets/sass/_settings.sass
+++ b/public/stylesheets/sass/_settings.sass
@@ -1,11 +1,15 @@
 @import variables.sass
 
 #settings-profile
-	+float_left
-	margin: 0
-	text-align: left
-	margin-right: 1em
-
+	.help
+		+float_right
+		text-align: left
+		width: 25em
+		
+	form
+		margin: 0
+		width: 33em
+		
 #settings-privacy
 	width: 100%
 	margin: 0
