--- a/app/views/soundwalks/show.html.haml
+++ b/app/views/soundwalks/show.html.haml
@@ -17,11 +17,12 @@
 	- max_duration = -9999999	
 	
 	- for sound in @sounds
-		- duration = sound.samples / sound.sample_rate.to_f
-		- sum_duration += duration
-		- min_duration = duration if duration < min_duration
-		- max_duration = duration if duration > max_duration
-		- mean_duration = sum_duration / @sounds.size
+		- if sound
+			- duration = sound.samples / sound.sample_rate.to_f
+			- sum_duration += duration
+			- min_duration = duration if duration < min_duration
+			- max_duration = duration if duration > max_duration
+			- mean_duration = sum_duration / @sounds.size
 
 = render :partial => 'soundwalks/soundwalk_profile', :locals => {:soundwalk => @soundwalk, :edit_title => true}
 = render :partial => 'sounds/sounds_map', :locals => {:sounds => @sounds, :soundwalk => @soundwalk}
