--- a/app/views/soundwalks/show.html.haml
+++ b/app/views/soundwalks/show.html.haml
@@ -17,7 +17,7 @@
 	- max_duration = -9999999	
 	
 	- for sound in @sounds
-		- if sound
+		- if !sound.isnil?
 			- duration = sound.samples / sound.sample_rate.to_f
 			- sum_duration += duration
 			- min_duration = duration if duration < min_duration
